--- a/index.html
+++ b/index.html
@@ -114,9 +114,15 @@
             <!-- Subzona 3 -->
             <section id="contenedor_zona_3">
                 <h2>CONTENEDOR ZONA 3</h2>
-                <a href="https://www.laacequia.deproyectosjuanerre.com/" tabindex="0">https://www.laacequia.deproyectosjuanerre.com/</a>
-                <img rel="img" id="web_laacequia" src="imagenes/web_laacequia.jpg"  alt="acequia">
-            </section>
+                <div>
+                    <a href="https://www.laacequia.deproyectosjuanerre.com/" tabindex="0">https://www.laacequia.deproyectosjuanerre.com/</a>
+                    <img rel="img" id="web_laacequia" src="imagenes/web_laacequia.jpg"  alt="acequia">
+                </div>
+                <div>
+                    <a href="https://newexplorers.org/" tabindex="0">https://newexplorers.org/</a>
+                    <img rel="img" id="web_newexplorers" src="imagenes/newexplorers.jpg"  alt="newexplorers">
+                </div>
+                </section>
 
         <!-- Zona de pie de página -->
         <footer>
