--- a/english.html
+++ b/english.html
@@ -35,8 +35,8 @@
                     <a href="index.html" tabindex="0"><img rel="icon" class="logo" src="imagenes/logo.png" alt="logo"></a>
                 </div>
                 <div id="menu" >               
-                    <a href="#contenedor_zona_2" accesskey="1" tabindex="0" >SKILLS</a>
-                    <a href="#contenedor_zona_3" accesskey="2" tabindex="0" >PROJECTS</a>
+                    <a href="#habilidades" accesskey="1" tabindex="0" >SKILLS</a>
+                    <a href="#proyectos" accesskey="2" tabindex="0" >PROJECTS</a>
                 </div>
                 <div>
                     <p>contacto@deproyectosjuanerre.com</p>
@@ -96,7 +96,7 @@
             </section>
 
             <!-- Subzona 2 -->
-            <section id="contenedor_zona_2">
+            <section id="habilidades">
                 <h2>CONTENEDOR ZONA 2</h2>
                 <div>
                     <img rel="icon" class="icono" src="imagenes/html.png"  alt="html" title="html">
@@ -112,7 +112,7 @@
             </section>
 
             <!-- Subzona 3 -->
-            <section id="contenedor_zona_3">
+            <section id="proyectos">
                 <h2>CONTENEDOR ZONA 3</h2>
                 <div>
                     <a href="https://www.laacequia.deproyectosjuanerre.com/" tabindex="0">https://www.laacequia.deproyectosjuanerre.com/</a>
