--- a/index.html
+++ b/index.html
@@ -115,12 +115,12 @@
             <section id="proyectos">
                 <h2>CONTENEDOR ZONA 3</h2>
                 <div>
-                    <a href="https://www.laacequia.deproyectosjuanerre.com/" tabindex="0">https://www.laacequia.deproyectosjuanerre.com/</a>
+                    <a href="https://laacequia.deproyectosjuanerre.com/" tabindex="0">https://www.laacequia.deproyectosjuanerre.com/</a>
                     <img rel="img" id="web_laacequia" src="imagenes/web_laacequia.jpg"  alt="acequia">
                 </div>
                 <div>
-                    <a href="https://newexplorers.org/" tabindex="0">https://newexplorers.org/</a>
-                    <img rel="img" id="web_newexplorers" src="imagenes/newexplorers.jpg"  alt="newexplorers">
+                    <a href="https://montaya.deproyectosjuanerre.com" tabindex="0">https://montaya.deproyectosjuanerre.com/</a>
+                    <img rel="img" id="web_montaya" src="imagenes/montaya.jpg"  alt="montaya">
                 </div>
                 </section>
 
