--- a/english.html
+++ b/english.html
@@ -125,13 +125,17 @@
                     <a href="https://montaya.deproyectosjuanerre.com" tabindex="0">https://montaya.deproyectosjuanerre.com/</a>
                     <img rel="img" id="web_montaya" src="imagenes/montaya.jpg"  alt="montaya">
                 </div>
+                <div>
+                    <a href="https://notas.deproyectosjuanerre.com" tabindex="0">https://notas.deproyectosjuanerre.com/</a>
+                    <img rel="img" id="web_notas" src="imagenes/notas.png"  alt="notas">
+                </div>
             </section>
 
         <!-- Zona de pie de página -->
         <footer>
             <!-- Para seleccionar una imagen y colocarla en otro lugar -->
             <div>
-                <h3> Completa el rompecabezas para obtener una imagen como esta: </h3>
+                <h3> Complete the puzzle to get an image like this: </h3>
                 <img id="solucion" src="imagenes/solucion.png" alt="imagen" tabindex="0"> 
             </div>
             <div id="juego">
