--- a/index.html
+++ b/index.html
@@ -125,6 +125,10 @@
                     <a href="https://montaya.deproyectosjuanerre.com" tabindex="0">https://montaya.deproyectosjuanerre.com/</a>
                     <img rel="img" id="web_montaya" src="imagenes/montaya.jpg"  alt="montaya">
                 </div>
+                <div>
+                    <a href="https://notas.deproyectosjuanerre.com" tabindex="0">https://notas.deproyectosjuanerre.com/</a>
+                    <img rel="img" id="web_notas" src="imagenes/notas.png"  alt="notas">
+                </div>
                 </section>
 
         <!-- Zona de pie de página -->
